pandas general tricks

--- a/generalFunctions.ipynb
+++ b/generalFunctions.ipynb
@@ -58,6 +58,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mylist = [1,2]\n",
+    "print(clusterByTotalSum(mylist,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
