--- a/generalFunctions.ipynb
+++ b/generalFunctions.ipynb
@@ -75,6 +75,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## return sublist index which contains an element "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ClusterPosition(xlist, element):\n",
+    "\n",
+    "    for sublist in xlist:\n",
+    "        if element in sublist:\n",
+    "            break\n",
+    "    xIndex = xlist.index(sublist)\n",
+    "    return xIndex\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "xlist = [[1, 2, 3], [4], [5,6], [7,8,9,10]]\n",
+    "print (ClusterPosition(xlist, 5))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
