--- a/pandas Group by Tricks.ipynb
+++ b/pandas Group by Tricks.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,6 +155,239 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mt</th>\n",
+       "      <th>sp</th>\n",
+       "      <th>val</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>S1</td>\n",
+       "      <td>MM1</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>S3</td>\n",
+       "      <td>MM1</td>\n",
+       "      <td>cb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>S3</td>\n",
+       "      <td>MM2</td>\n",
+       "      <td>mk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>S4</td>\n",
+       "      <td>MM2</td>\n",
+       "      <td>bg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>7</td>\n",
+       "      <td>S2</td>\n",
+       "      <td>MM4</td>\n",
+       "      <td>uyi</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   count  mt   sp  val\n",
+       "0      3  S1  MM1    a\n",
+       "2      5  S3  MM1   cb\n",
+       "3      8  S3  MM2   mk\n",
+       "4     10  S4  MM2   bg\n",
+       "8      7  S2  MM4  uyi"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df.groupby([\"sp\", \"mt\"])[\"count\"].idxmax()] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Second Approach"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = df.groupby([\"sp\", \"mt\"])['count'].transform(max) == df['count']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mt</th>\n",
+       "      <th>sp</th>\n",
+       "      <th>val</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>S1</td>\n",
+       "      <td>MM1</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>S3</td>\n",
+       "      <td>MM1</td>\n",
+       "      <td>cb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>S3</td>\n",
+       "      <td>MM2</td>\n",
+       "      <td>mk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>S4</td>\n",
+       "      <td>MM2</td>\n",
+       "      <td>bg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>7</td>\n",
+       "      <td>S2</td>\n",
+       "      <td>MM4</td>\n",
+       "      <td>uyi</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   count  mt   sp  val\n",
+       "0      3  S1  MM1    a\n",
+       "2      5  S3  MM1   cb\n",
+       "3      8  S3  MM2   mk\n",
+       "4     10  S4  MM2   bg\n",
+       "8      7  S2  MM4  uyi"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[idx]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## getting index of rows with max index value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 8]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indexes = list(df.groupby([\"sp\"])[\"count\"].idxmax().values)\n",
+    "indexes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[indexes,'val'] = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -194,6 +427,13 @@
        "      <td>a</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>S1</td>\n",
+       "      <td>MM1</td>\n",
+       "      <td>n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>5</td>\n",
        "      <td>S3</td>\n",
@@ -215,6 +455,27 @@
        "      <td>bg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>S4</td>\n",
+       "      <td>MM2</td>\n",
+       "      <td>dgb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>S2</td>\n",
+       "      <td>MM4</td>\n",
+       "      <td>rd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>S2</td>\n",
+       "      <td>MM4</td>\n",
+       "      <td>cb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>7</td>\n",
        "      <td>S2</td>\n",
@@ -228,9 +489,13 @@
       "text/plain": [
        "   count  mt   sp  val\n",
        "0      3  S1  MM1    a\n",
+       "1      2  S1  MM1    n\n",
        "2      5  S3  MM1   cb\n",
        "3      8  S3  MM2   mk\n",
        "4     10  S4  MM2   bg\n",
+       "5      1  S4  MM2  dgb\n",
+       "6      2  S2  MM4   rd\n",
+       "7      2  S2  MM4   cb\n",
        "8      7  S2  MM4  uyi"
       ]
      },
@@ -240,28 +505,19 @@
     }
    ],
    "source": [
-    "df.loc[df.groupby([\"sp\", \"mt\"])[\"count\"].idxmax()] "
+    "df"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Second Approach"
+    "## group by general "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = df.groupby([\"sp\", \"mt\"])['count'].transform(max) == df['count']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -285,68 +541,79 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>count</th>\n",
-       "      <th>mt</th>\n",
        "      <th>sp</th>\n",
-       "      <th>val</th>\n",
+       "      <th>mt</th>\n",
+       "      <th>count sum</th>\n",
+       "      <th>count min</th>\n",
+       "      <th>val count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>S1</td>\n",
        "      <td>MM1</td>\n",
-       "      <td>a</td>\n",
+       "      <td>S1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MM1</td>\n",
+       "      <td>S3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5</td>\n",
+       "      <td>MM2</td>\n",
        "      <td>S3</td>\n",
-       "      <td>MM1</td>\n",
-       "      <td>cb</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>8</td>\n",
-       "      <td>S3</td>\n",
        "      <td>MM2</td>\n",
-       "      <td>mk</td>\n",
+       "      <td>S4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>10</td>\n",
-       "      <td>S4</td>\n",
-       "      <td>MM2</td>\n",
-       "      <td>bg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>7</td>\n",
-       "      <td>S2</td>\n",
        "      <td>MM4</td>\n",
-       "      <td>uyi</td>\n",
+       "      <td>S2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   count  mt   sp  val\n",
-       "0      3  S1  MM1    a\n",
-       "2      5  S3  MM1   cb\n",
-       "3      8  S3  MM2   mk\n",
-       "4     10  S4  MM2   bg\n",
-       "8      7  S2  MM4  uyi"
+       "    sp  mt  count sum  count min  val count\n",
+       "0  MM1  S1          5          2          2\n",
+       "1  MM1  S3          5          5          1\n",
+       "2  MM2  S3          8          8          1\n",
+       "3  MM2  S4         11          1          2\n",
+       "4  MM4  S2         11          2          3"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[idx]"
+    "df_Aggregated = df.groupby(['sp', 'mt'], as_index=True, sort=False).agg({\n",
+    "    'count': ['sum', 'min'],\n",
+    "    'val': ['count']}).reset_index()\n",
+    "\n",
+    "df_Aggregated.columns = [' '.join(col).strip() for col in df_Aggregated.columns.values]\n",
+    "df_Aggregated"
    ]
   },
   {
