--- a/pandas general tricks.ipynb
+++ b/pandas general tricks.ipynb
@@ -504,6 +504,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## filter df when cells contain lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               bar              foo\n",
+      "0  [500, 600, 700]  [100, 200, 300]\n",
+      "1       [999, 888]  [111, 112, 113]\n",
+      "2       [110, 120]  [222, 333, 444]\n",
+      "               bar              foo\n",
+      "0  [500, 600, 700]  [100, 200, 300]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "d = {'foo':[[100,200,300], [111,112,113], [222,333,444]],\n",
+    "     'bar':[[500,600,700], [999,888], [110,120]]}\n",
+    "df = pd.DataFrame(d)\n",
+    "\n",
+    "\n",
+    "print(df)\n",
+    "\n",
+    "df=df.astype(str)\n",
+    "\n",
+    "df = df[df['foo'].str.contains('100', na = False)]\n",
+    "\n",
+    "print(df)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
