add optimization examples

--- a/pandas general tricks.ipynb
+++ b/pandas general tricks.ipynb
@@ -546,6 +546,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## using str as expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1=0\n",
+    "x2=0\n",
+    "x3=0\n",
+    "s = \"10 * x1 + 4 * x2 + 5 * x3\"\n",
+    "expr = eval(s)\n",
+    "expr\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
