--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -10,11 +10,11 @@
      "output_type": "stream",
      "text": [
       "status: optimal\n",
-      "objective value: 666.0\n",
+      "objective value: 564.8\n",
       "----------\n",
-      "x1 = 29.0\n",
-      "x2 = 46.0\n",
-      "x3 = 25.0\n",
+      "x1 = 41.0\n",
+      "x2 = 1.0\n",
+      "x3 = 37.2\n",
       "{'GUROBI': False, 'GLPK': True, 'MOSEK': True, 'CPLEX': False, 'SCIPY': True}\n"
      ]
     }
@@ -25,7 +25,7 @@
     "import optlang\n",
     "# All the (symbolic) variables are declared, with a name and optionally a lower and/or upper bound.\n",
     "x1 = Variable('x1', lb=0, type=\"integer\")\n",
-    "x2 = Variable('x2', lb=0)\n",
+    "x2 = Variable('x2', lb=0, type=\"binary\")\n",
     "x3 = Variable('x3', lb=0)\n",
     "\n",
     "\n",
