Update pandas Group by Tricks.ipynb

--- a/pandas Group by Tricks.ipynb
+++ b/pandas Group by Tricks.ipynb
@@ -631,7 +631,8 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": ["new_df = df_selected.groupby(['CompetitorHotelId','CompetitorRoomTypeId',  'CompHotelName', 'CompRoomTypeName','Day',])['UpdatedAt_cleaned'].apply(list)"]
+   "source": ["new_df = df_selected.groupby(['CompetitorHotelId','CompetitorRoomTypeId',  'CompHotelName', 'CompRoomTypeName','Day',])\n",
+    "['UpdatedAt_cleaned'].apply(list)"]
   }
  ],
  "metadata": {
